--- a/components/Message/style/component.scss
+++ b/components/Message/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/index';
+@import '../../style/themes/default';
 
 $border-radius-base: 6px;
 $border-color-base: #d9d9d9;
@@ -29,7 +29,7 @@ $default-color: #2db7f5;
     opacity: 1;
     transform: translate(0, 0);
   }
-  
+
   .ui-message-container {
     position: relative;
     right: 50%;
