--- a/components/Tab/style/component.scss
+++ b/components/Tab/style/component.scss
@@ -1,4 +1,5 @@
-@import '../../style/index';
+@import '../../style/themes/default';
+@import "../../style/core/mixins/index";
 
 .ui-tab {
 
@@ -49,7 +50,7 @@
     .ui-tab-body-item {
       display: none;
       line-height: normal;
-      
+
       &.ui-tab-body-item-active {
         display: block;
       }
