--- a/components/Table/style/component.scss
+++ b/components/Table/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/index';
+@import '../../style/themes/default';
 
 @mixin table-size($padding, $border-radius) {
   table {
@@ -107,7 +107,7 @@
     }
     &.ui-table-multi-headrow {
       border: 1px solid #e9e9e9;
-      border-left: 0;      
+      border-left: 0;
       border-right: 0;
       text-align: center;
 
