--- a/components/Upload/style/component.scss
+++ b/components/Upload/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/index';
+@import '../../style/themes/default';
 
 .ui-upload {
 
@@ -56,7 +56,7 @@
     height: 58px;
     background: #f1f1f1;
     text-align: center;
-    
+
     img {
       max-width: 100%;
       max-height: 100%;
