fix: css bug & demo not unmount bug

--- a/components/Button/style/component.scss
+++ b/components/Button/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/themes/default';
+@import '../../style/index';
 
 @mixin button-theme($color, $background, $border) {
   $active-background: darken($background, 10%);
