--- a/components/Input/style/component.scss
+++ b/components/Input/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/themes/default';
+@import '../../style/index';
 
 @mixin input-size($height, $padding, $font-size, $border-radius) {
   height: $height;
