--- a/components/Progress/style/component.scss
+++ b/components/Progress/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/themes/default';
+@import '../../style/index';
 
 @mixin progress-theme($color, $background, $border) {
   .ui-progress-bg {
