--- a/components/Select/style/component.scss
+++ b/components/Select/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/themes/default';
+@import '../../style/index';
 
 @mixin select-size($height, $padding, $font-size, $border-radius) {
 
