--- a/components/Tag/style/component.scss
+++ b/components/Tag/style/component.scss
@@ -1,4 +1,4 @@
-@import '../../style/themes/default';
+@import '../../style/index';
 
 @mixin tag-theme($color, $background) {
   $active-background: darken($background, 10%);
