--- a/examples/styles/index.scss
+++ b/examples/styles/index.scss
@@ -4,5 +4,6 @@
 // @import "~dragon-ui/components/style/components";
 
 @import "./functions/index";
+@import "./pages/index";
 @import "./base/index";
 @import "./base/prism";
