chore: add arrow icons

--- a/components/Icon/style/component.scss
+++ b/components/Icon/style/component.scss
@@ -137,4 +137,6 @@
   &-like-fill:before { content: '\e86a' }
   &-unlike-fill:before { content: '\e86b' }
   &-pushpin-fill:before { content: '\e86d' }
+  &-arrowleftb:before { content: '\e6c2' }
+  &-arrowrightb:before { content: '\e644' }
 }
