--- a/components/Icon/style/component.scss
+++ b/components/Icon/style/component.scss
@@ -139,4 +139,6 @@
   &-pushpin-fill:before { content: '\e86d' }
   &-arrowleftb:before { content: '\e6c2' }
   &-arrowrightb:before { content: '\e644' }
+  &-arrowtop:before { content: '\e6b2' }
+  &-arrowbottom:before { content: '\e6a2' }
 }
