--- a/components/Select/style/component.scss
+++ b/components/Select/style/component.scss
@@ -1,7 +1,6 @@
 @import '../../style/index';
 
-@mixin select-size($height, $padding, $font-size, $border-radius) {  
-
+@mixin select-size($height, $padding, $font-size, $border-radius) {
   .ui-select-selection {
     min-height: $height;
     font-size: $font-size;
@@ -44,6 +43,7 @@
 
 .ui-select {
   @include select-size($base-height, $base-padding, $base-fontSize, $base-radius);
+
   display: inline-block;
   margin: 0;
   position: relative;
@@ -58,7 +58,7 @@
     background-color: #fff;
     border: 1px solid #d9d9d9;
     transition: all .3s cubic-bezier(.645, .045, .355, 1);
-    /*box-shadow: inset 0 1px 3px #e3e3e3;*/
+    /* box-shadow: inset 0 1px 3px #e3e3e3; */
     cursor: pointer;
 
     &:hover {
@@ -127,6 +127,25 @@
 
       &:active {
         border-color: #d9d9d9;
+      }
+    }
+  }
+
+  .select-btn-list {
+    padding: 5px;
+
+    .select-btn {
+      margin-left: 5px;
+      border: 1px solid #ccc;
+      display: inline-block;
+      min-width: 30px;
+      text-align: center;
+      border-radius: 5px;
+      padding: 3px 5px;
+      font-size: 12px;
+
+      &:first-child {
+        margin-left: 0;
       }
     }
   }
