chore: update button href cover time pick test

--- a/components/button/style/component.scss
+++ b/components/button/style/component.scss
@@ -143,5 +143,8 @@
   &.theme-error {
     @include button-theme($base-btn-error-color, $base-btn-error-bg, $base-btn-error-border);
   }
+}
 
+a.ui-button {
+  text-decoration: none;
 }
