chore: update prism.scss

--- a/examples/styles/base/prism.scss
+++ b/examples/styles/base/prism.scss
@@ -28,13 +28,15 @@ pre[class*="language-"] {
 }
 
 pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection
+{
   text-shadow: none;
   background: #dfe2f1;
 }
 
 pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
+code[class*="language-"]::selection, code[class*="language-"] ::selection
+{
   text-shadow: none;
   background: #dfe2f1;
 }
