--- a/components/calendar/style/component.scss
+++ b/components/calendar/style/component.scss
@@ -1,9 +1,57 @@
 .ui-calendar {
   width: 240px;
+
+  &.ui-calendar-showTime {
+    width: 360px;
+
+    .ui-time-select {
+      position: absolute;
+      width: 100%;
+      height: 230px;
+      left: 0;
+      top: 0;
+      z-index: 10000;
+    }
+
+    .ui-time-select-wrapper {
+      float: right;
+      margin-top: 3px;
+    }
+
+    .ui-time-select .ui-select .ui-select-selection {
+      max-height: 250px !important;
+    }
+
+    //.ui-calendar-header,
+    //.ui-calendar-footer {
+    //  text-align: initial;
+    //
+    //  .ui-calendar-header-time {
+    //    padding-left: 60px;
+    //  }
+    //
+    //  .ui-calendar-header-next-btn {
+    //    right: 160px;
+    //  }
+    //}
+
+    .ui-calendar-header {
+      div:nth-of-type(1) {
+        text-align: initial;
+
+        .ui-calendar-header-next-btn {
+          right: 160px;
+        }
+
+        .ui-calendar-header-time {
+          padding-left: 60px;
+        }
+      }
+    }
+  }
 }
 
-.ui-calendar-header,
-.ui-calendar-footer {
+.ui-calendar-header {
   position: relative;
   height: 40px;
   line-height: 40px;
@@ -58,6 +106,11 @@
     margin: 0 auto;
 
     .ui-calendar-column {
+      padding: 4px 0;
+      width: 24px;
+      height: 24px;
+      line-height: 24px;
+      border: 1px solid transparent;
       text-align: center;
     }
 
@@ -110,7 +163,6 @@
     }
 
     &.ui-calendar-year {
-
       .ui-calendar-cell {
         padding: 14px 0;
 
@@ -123,7 +175,6 @@
     }
 
     &.ui-calendar-month {
-
       .ui-calendar-cell {
         padding: 14px 0;
 
@@ -134,15 +185,23 @@
         }
       }
     }
-
   }
 }
 
-/*footer*/
 .ui-calendar-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
   border-top: 1px solid #e9e9e9;
 
-  .ui-calendar-footer-btn {
-    padding: 0 4px;
+  a {
+    color: #666;
+    text-decoration: none;
+
+    &:hover {
+      color: #2db7f5;
+      text-decoration: none;
+    }
   }
 }
