chore: update icon name

--- a/components/icon/style/component.scss
+++ b/components/icon/style/component.scss
@@ -56,8 +56,8 @@
   &-warning-round:before { content: '\e611'; }
   &-date:before { content: '\e63d'; }
   &-close-round:before { content: '\e60e'; }
-  &-fangxingxuanzhongfill:before { content: '\e622'; }
-  &-fangxingxuanzhong:before { content: '\e623'; }
+  &-square-check-fill:before { content: '\e622'; }
+  &-square-check:before { content: '\e623'; }
   &-wrong:before { content: '\e60f'; }
   &-wrong-round-fill:before { content: '\e613'; }
   &-wrong-round:before { content: '\e614'; }
