--- a/components/icon/style/component.scss
+++ b/components/icon/style/component.scss
@@ -50,53 +50,33 @@
   &-add:before { content: '\e606'; }
   &-minus:before { content: '\e607'; }
   &-warning-round-fill:before { content: '\e610'; }
-  &-download:before { content: '\e638'; }
   &-warning-round:before { content: '\e611'; }
   &-date:before { content: '\e63d'; }
-  &-square-check-fill:before { content: '\e622'; }
-  &-square-check:before { content: '\e623'; }
   &-wrong:before { content: '\e60f'; }
   &-wrong-round-fill:before { content: '\e613'; }
   &-wrong-round:before { content: '\e614'; }
   &-add-round:before { content: '\e615'; }
   &-add:before { content: '\e616'; }
   &-add-round-fill:before { content: '\e617'; }
-  &-tishi:before { content: '\e61c'; }
   &-minus-round-fill:before { content: '\e60c'; }
   &-required:before { content: '\e60d'; }
   &-loading:before { content: '\e608'; }
-  &-download1:before { content: '\e663'; }
   &-minus-round:before { content: '\e612'; }
   &-brush:before { content: '\e6e5'; }
   &-brush-fill:before { content: '\e6e6'; }
-  &-camera-fill:before { content: '\e6e7'; }
-  &-camera:before { content: '\e6e8'; }
-  &-collection-fill:before { content: '\e6ea'; }
-  &-collection:before { content: '\e6eb'; }
-  &-computer-fill:before { content: '\e6ec'; }
   &-empty:before { content: '\e6f7'; }
   &-empty-fill:before { content: '\e6f8'; }
-  &-like-fill:before { content: '\e707'; }
-  &-lock:before { content: '\e709'; }
-  &-setup-fill:before { content: '\e728'; }
-  &-setup:before { content: '\e729'; }
   &-search:before { content: '\e741'; }
   &-time-circle:before { content: '\e784'; }
   &-folder:before { content: '\e7d1'; }
   &-folder-open:before { content: '\e7d2'; }
   &-folder-add:before { content: '\e7d3'; }
-  &-menu:before { content: '\e7f4'; }
   &-stop:before { content: '\e842'; }
-  &-file-text-fill:before { content: '\e858'; }
   &-folder-add-fill:before { content: '\e85e'; }
   &-folder-fill:before { content: '\e85f'; }
   &-folder-open-fill:before { content: '\e860'; }
-  &-cloud-fill:before { content: '\e869'; }
-  &-like-fill:before { content: '\e86a'; }
-  &-unlike-fill:before { content: '\e86b'; }
-  &-pushpin-fill:before { content: '\e86d'; }
-  &-arrowleftb:before { content: '\e6c2'; }
-  &-arrowrightb:before { content: '\e644'; }
-  &-arrowtop:before { content: '\e6b2'; }
-  &-arrowbottom:before { content: '\e6a2'; }
+  &-arrow-left-fill:before { content: '\e6c2'; }
+  &-arrow-right-fill:before { content: '\e644'; }
+  &-arrow-top-fill:before { content: '\e6b2'; }
+  &-arrow-bottom-fill:before { content: '\e6a2'; }
 }
