--- a/components/calendar/style/component.scss
+++ b/components/calendar/style/component.scss
@@ -1,40 +1,40 @@
+@import '../../style/core/mixins/index';
+
 .ui-calendar {
   width: 240px;
 
   &.ui-calendar-showTime {
     width: 360px;
+  }
+}
 
-    .ui-time-select {
-      position: absolute;
-      width: 100%;
-      height: 230px;
-      left: 0;
-      top: 0;
-      z-index: 10000;
-    }
+.ui-calendar-time-header {
+  position: relative;
+  color: #666;
+  //height: 45px;
+  line-height: 45px;
+  padding: 4px;
+  text-align: center;
+  border-bottom: 1px solid #e9e9e9;
 
-    .ui-time-select-wrapper {
-      float: right;
-      margin: 4px 4px 0 0;
-    }
+  @include clearfix;
 
-    .ui-time-select .ui-select .ui-select-selection {
-      max-height: 250px !important;
-    }
+  .ui-time-select-wrapper {
+    float: right;
+    margin: 4px;
+  }
 
-    .ui-calendar-header {
-      div:nth-of-type(1) {
-        text-align: initial;
+  .ui-time-select {
+    position: absolute;
+    width: 100%;
+    height: 230px;
+    left: 0;
+    top: 0;
+    z-index: 10000;
+  }
 
-        .ui-calendar-header-next-btn {
-          right: 160px;
-        }
-
-        .ui-calendar-header-time {
-          padding-left: 60px;
-        }
-      }
-    }
+  .ui-time-select .ui-select .ui-select-selection {
+    max-height: 250px !important;
   }
 }
 
@@ -125,12 +125,18 @@
       }
 
       .ui-calendar-text-others {
-        color: #ccc;
+        color: #ccc !important;
+        border: none !important;
+        background: none !important;
       }
 
       .ui-calendar-text-today {
         color: #2db7f5;
         border-color: #2db7f5;
+      }
+
+      .ui-calendar-text-range {
+        color: #f0ad4e;
       }
 
       .ui-calendar-text-disabled {
