--- a/components/table/style/component.scss
+++ b/components/table/style/component.scss
@@ -16,7 +16,9 @@
   }
 }
 
-.ui-table {
+$prefixCls: ui-table;
+
+.#{$prefixCls} {
   @include table-size(12px, $base-radius);
   position: relative;
   color: #666;
@@ -25,8 +27,6 @@
     width: 100%;
     overflow-x: auto;
     transition: opacity .3s ease;
-    border-left: 1px solid #e9e9e9;
-    border-right: 1px solid #e9e9e9;
   }
   &-fixed-left {
     position: absolute;
@@ -69,9 +69,7 @@
     th,
     td {
       white-space: nowrap;
-      border-bottom: 1px solid #e9e9e9;
     }
-
     th {
       background: #f4f4f4;
       font-weight: bold;
@@ -99,15 +97,12 @@
         }
       }
     }
-    &.ui-table-multi-headrow {
-      border: 1px solid #e9e9e9;
-      border-left: 0;
-      border-right: 0;
+    &.#{$prefixCls}-multi-headrow {
       text-align: center;
 
-      th,
-      td {
+      th {
         border-right: 1px solid #e9e9e9;
+        border-bottom: 1px solid #e9e9e9;
 
         &:last-child {
           border-right: 0;
@@ -121,13 +116,45 @@
     }
   }
 
-  .ui-table-scroll {
+  &-expand-icon {
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    line-height: 13px;
+    text-align: center;
+    border: 1px solid #e8e8e8;
+    user-select: none;
+    background-color: #fff;
+    cursor: pointer;
+  }
+
+  &-icon-expanded::before {
+    content: '-';
+  }
+  &-icon-collapsed::before {
+    content: '+';
+  }
+
+  &-expanded-row {
+    background-color: rgb(251, 251, 251);
+  }
+
+  &-scroll {
     width: auto;
     min-width: 100%;
     text-align: left;
   }
 
-  &.ui-table-bordered {
+  &.#{$prefixCls}-bordered {
+    .#{$prefixCls}-body {
+      border-left: 1px solid #e9e9e9;
+      border-right: 1px solid #e9e9e9;
+    }
+    &.#{$prefixCls}-multi-headrow {
+      border: 1px solid #e9e9e9;
+      border-left: 0;
+      border-right: 0;
+    }
     table {
       border: 1px solid #e9e9e9;
       border-left: 0;
@@ -136,6 +163,7 @@
       th,
       td {
         border-right: 1px solid #e9e9e9;
+        border-bottom: 1px solid #e9e9e9;
 
         &:last-child {
           border-right: 0;
@@ -148,14 +176,14 @@
       }
     }
 
-    .ui-table-fixed-left,
-    .ui-table-fixed-right {
+    .#{$prefixCls}-fixed-left,
+    .#{$prefixCls}-fixed-right {
       border: 1px solid #e9e9e9 !important;
       border-bottom: 0;
     }
   }
 
-  &.ui-table-striped {
+  &.#{$prefixCls}-striped {
     tbody {
       > tr:nth-of-type(even) {
         background: #fbfbfb;
@@ -163,7 +191,7 @@
     }
   }
 
-  &.ui-table-hover {
+  &.#{$prefixCls}-hover {
     tbody {
       tr:hover, tr.hover {
         background-color: #ecf6fd !important;
@@ -185,7 +213,7 @@
   }
 }
 
-.ui-table-sorter {
+.#{$prefixCls}-sorter {
   margin-left: 5px;
   display: inline-block;
   width: 8px;
@@ -193,8 +221,8 @@
   vertical-align: middle;
   text-align: center;
 
-  .ui-table-sorter-up,
-  .ui-table-sorter-down {
+  &-up,
+  &-down {
     display: block;
     width: 0;
     height: 0;
@@ -202,21 +230,21 @@
     border-style: solid;
   }
 
-  .ui-table-sorter-up {
+  &-up {
     border-width: 0 4px 7px;
     border-color: transparent transparent #ddd;
     margin-bottom: 2px;
 
-    &.ui-table-sorter-active {
+    &.#{$prefixCls}-sorter-active {
       border-color: transparent transparent #2db7f5;
     }
   }
 
-  .ui-table-sorter-down {
+  &-down {
     border-width: 7px 4px 0;
     border-color: #ddd transparent transparent;
 
-    &.ui-table-sorter-active {
+    &.#{$prefixCls}-sorter-active {
       border-color: #2db7f5 transparent transparent;
     }
   }
