--- a/components/form/style/component.scss
+++ b/components/form/style/component.scss
@@ -5,7 +5,11 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $shadow-color;
   }
   .ui-form-explain {
+    position: absolute;
+    top: 30px;
+    left: 0;
     color: $theme;
+    font-size: 12px;
   }
 }
 
@@ -40,7 +44,6 @@
 }
 
 .ui-form-inline {
-
   &:before {
     content: " ";
     display: table;
@@ -93,6 +96,10 @@
 
   .ui-form-item-control {
     line-height: 30px;
+
+    &-help {
+      position: relative;
+    }
 
     /* form-item-control theme */
     &.theme-default {
