--- a/components/transfer/style/component.scss
+++ b/components/transfer/style/component.scss
@@ -2,6 +2,7 @@
 .ui-transfer {
   width: 400px;
   height: 250px;
+  max-height: 250px;
 
   > .ui-transfer-panel {
     display: inline-block;
@@ -16,8 +17,11 @@
     > .ui-select {
       width: 100%;
       height: calc(100% - 30px);
+      vertical-align: initial;
 
       > .ui-select-selection {
+        width: 100%;
+        height: 100%;
         text-align: left;
 
         .ui-menu-item:hover {
@@ -37,14 +41,25 @@
   }
 
   > .ui-transfer-action-bar {
-    width: 10%;
+    width: 36px;
     height: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 4%;
+    margin-right: 4%;
     display: inline-block;
+    position: relative;
 
-    > button:last-child {
-      margin-top: 20px;
+    > .button-wrapper {
+      width: 100%;
+      height: 84px;
+      position: absolute;
+      top: 15px;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+
+      > button:last-child {
+        margin-top: 20px;
+      }
     }
   }
 }
