--- a/components/tag/style/component.scss
+++ b/components/tag/style/component.scss
@@ -22,11 +22,15 @@
   }
 }
 
-@mixin tag-size($height, $padding, $font-size, $border-radius) {
+@mixin tag-size($height, $padding, $paddingRight, $font-size, $border-radius) {
   padding: $padding;
   font-size: $font-size;
   height: $height - 2;
   line-height: $height - 2;
+
+  &.hasCloseButton {
+    padding-right: $paddingRight;
+  }
 
   &.radius {
     border-radius: $border-radius;
@@ -44,11 +48,15 @@
 }
 
 .ui-tag {
-  @include tag-size($base-height, 0 10px, $base-fontSize, $base-radius);
+  @include tag-size($base-height, 0 10px, 20px, $base-fontSize, $base-radius);
+
   display: inline-block;
+  position: relative;
+  text-overflow: ellipsis;
   transition: all .3s cubic-bezier(.78, .14, .15, .86);
   vertical-align: middle;
   overflow: hidden;
+  white-space: nowrap;
 
   /* disabled Tag */
   &.disabled,
@@ -60,16 +68,19 @@
 
   /* Tag sizes */
   &.size-xl {
-    @include tag-size($base-height-xl, 0 14px, $base-fontSize-xl, $base-radius-xl);
+    @include tag-size($base-height-xl, 0 14px, 24px, $base-fontSize-xl, $base-radius-xl);
   }
+
   &.size-lg {
-    @include tag-size($base-height-lg, 0 12px, $base-fontSize-lg, $base-radius-lg);
+    @include tag-size($base-height-lg, 0 12px, 22px, $base-fontSize-lg, $base-radius-lg);
   }
+
   &.size-sm {
-    @include tag-size($base-height-sm, 0 8px, $base-fontSize-sm, $base-radius-sm);
+    @include tag-size($base-height-sm, 0 8px, 20px, $base-fontSize-sm, $base-radius-sm);
   }
+
   &.size-xs {
-    @include tag-size($base-height-xs, 0 4px, $base-fontSize-xs, $base-radius-xs);
+    @include tag-size($base-height-xs, 0 4px, 16px, $base-fontSize-xs, $base-radius-xs);
   }
 
   /* Tag themes */
