--- a/components/tag-input/style/index.scss
+++ b/components/tag-input/style/index.scss
@@ -40,6 +40,10 @@
     top: 0;
     width: 100%;
     line-height: 32px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 30px);
   }
 
   .input-div-placeholder {
@@ -66,6 +70,10 @@
 .tag-input-box-active {
   border-color: #57c5f7;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+
+  .value-text {
+    color: #999;
+  }
 
   .arrow-bottom {
     transform: translateY(-50%) rotate(180deg);
