chore: add user icon

--- a/components/icon/style/component.scss
+++ b/components/icon/style/component.scss
@@ -79,4 +79,6 @@
   &-arrow-right-fill:before { content: '\e644'; }
   &-arrow-top-fill:before { content: '\e6b2'; }
   &-arrow-bottom-fill:before { content: '\e6a2'; }
+  &-user:before { content: '\e622'; }
+  &-user-fill:before { content: '\e626'; }
 }
