feat: add avatar

--- a/components/transfer/style/component.scss
+++ b/components/transfer/style/component.scss
@@ -53,7 +53,7 @@
       height: 84px;
       position: absolute;
       top: 15px;
-      bottom: 0;
+      bottom: 15px;
       margin-top: auto;
       margin-bottom: auto;
 
