完善Select组件的多选功能

--- a/components/dropdown/style/component.scss
+++ b/components/dropdown/style/component.scss
@@ -4,6 +4,11 @@
   }
 }
 
+.ui-dropdown-trigger-box {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .ui-dropdown {
   @include dropdown-size($base-radius);
 
