--- a/components/tag-input/style/index.scss
+++ b/components/tag-input/style/index.scss
@@ -1,10 +1,31 @@
+@import '../../style/themes/default';
+@mixin tag-size($height, $padding, $font-size, $border-radius) {
+  min-height: $height;
+
+  .radius {
+    border-radius: $border-radius;
+  }
+
+  .input-div {
+    line-height: $height - 2px;
+    font-size: $font-size;
+  }
+
+  .input-div-placeholder,
+  .value-text {
+    line-height: $height - 2px;
+    font-size: $font-size;
+  }
+}
+
 .tag-input-box {
+  @include tag-size($base-height,$base-padding, $base-fontSize-xs, $base-radius);
+
+  font-size: 0;
   width: 100%;
   min-width: 100px;
   border: 1px solid #d9d9d9;
   position: relative;
-  min-height: 32px;
-  padding: 0 5px;
   padding-right: 35px;
   will-change: box-shadow, border-color;
   transition: box-shadow, 0.3s, border-color 0.3s;
@@ -13,6 +34,11 @@
 
   &:hover {
     border-color: #57c5f7;
+  }
+
+  &.disabled {
+    border-color: #d9d9d9;
+    background-color: #f3f5f7;
   }
 
   &.radius {
@@ -26,24 +52,23 @@
     width: auto;
     white-space: nowrap;
     overflow: hidden;
-    height: 32px;
-    line-height: 32px;
+    line-height: $base-height - 2px;
     outline: none;
-    margin-left: 5px;
     max-width: 100%;
+    padding-left: 9px;
   }
 
   .input-div-placeholder,
   .value-text {
     position: absolute;
-    left: 10px;
+    left: 0;
     top: 0;
-    width: 100%;
-    line-height: 32px;
+    padding-left: 10px;
+    line-height: $base-height - 2px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: calc(100% - 30px);
+    max-width: calc(100% - 35px);
   }
 
   .input-div-placeholder {
@@ -51,7 +76,8 @@
   }
 
   .tag-list-box {
-    padding: 5px 2px;
+    padding: 5px 0;
+    margin-left: 5px;
     display: inline-block;
     vertical-align: middle;
   }
@@ -77,5 +103,23 @@
 
   .arrow-bottom {
     transform: translateY(-50%) rotate(180deg);
+  }
+}
+
+.tag-input-box {
+  &.size-xl {
+    @include tag-size($base-height-xl, $base-padding-xl, $base-fontSize-lg, $base-radius-xl);
+  }
+
+  &.size-lg {
+    @include tag-size($base-height-lg, $base-padding-lg, $base-fontSize, $base-radius-lg);
+  }
+
+  &.size-sm {
+    @include tag-size($base-height-sm, $base-padding-sm, $base-fontSize-xs, $base-radius-sm);
+  }
+
+  &.size-xs {
+    @include tag-size($base-height-xs, $base-padding-xs, $base-fontSize-xs, $base-radius-xs);
   }
 }
