fix: 1. 外部line-height变化导致内部高度变化的问题。 2. 多选框高度和单选框高度不一致的问题，3，在输入查找文字时候 文字显示不全的问题

--- a/components/tag-input/style/index.scss
+++ b/components/tag-input/style/index.scss
@@ -1,6 +1,7 @@
 @import '../../style/themes/default';
 @mixin tag-size($height, $padding, $font-size, $border-radius) {
   min-height: $height;
+  line-height: $height - 2px;
 
   .radius {
     border-radius: $border-radius;
@@ -49,7 +50,8 @@
   .input-div {
     display: inline-block;
     vertical-align: middle;
-    min-width: 10px;
+    min-width: 5px;
+    padding: 0 2px;
     width: auto;
     white-space: nowrap;
     overflow: hidden;
@@ -76,7 +78,8 @@
   }
 
   .tag-list-box {
-    padding: 5px 0;
+    padding: 4px 0;
+    line-height: 0;
     display: inline-block;
     vertical-align: middle;
   }
