fix: select option not highlight bug & optimize pagination style

--- a/components/pagination/style/component.scss
+++ b/components/pagination/style/component.scss
@@ -63,7 +63,8 @@
     margin-left: 6px;
     line-height: 28px;
 
-    .ui-select {
+    .ui-selectm,
+    .ui-dropdown-trigger-box {
       vertical-align: inherit;
     }
   }
