--- a/components/icon/style/component.scss
+++ b/components/icon/style/component.scss
@@ -2,14 +2,16 @@
   color: $color;
 }
 
+$icon-url: $base-icon-url;
+
 @font-face {
   font-family: "dragonicon";
-  src: url('../../style/fonts/iconfont.eot');
+  src: url('#{$icon-url}.eot');
   src:
-    url('../../style/fonts/iconfont.eot?#iefix') format('embedded-opentype'),
-    url('../../style/fonts/iconfont.woff') format('woff'),
-    url('../../style/fonts/iconfont.ttf') format('truetype'),
-    url('../../style/fonts/iconfont.svg#dragonicon') format('svg');
+    url('#{$icon-url}.eot?#iefix') format('embedded-opentype'),
+    url('#{$icon-url}.woff') format('woff'),
+    url('#{$icon-url}.ttf') format('truetype'),
+    url('#{$icon-url}.svg#dragonicon') format('svg');
 }
 
 .ui-icon {
