fix: dropdown background bug

--- a/components/tag-input/style/component.scss
+++ b/components/tag-input/style/component.scss
@@ -23,6 +23,7 @@
   width: 100%;
   min-width: 110px;
   border: 1px solid #d9d9d9;
+  background-color: #fff;
   position: relative;
   padding-right: 35px;
   padding-left: 8px;
