chore: enable textarea to accept custom height

--- a/components/input/style/component.scss
+++ b/components/input/style/component.scss
@@ -72,7 +72,7 @@ textarea {
   &.ui-input {
     width: auto;
     max-width: 100%;
-    height: auto !important;
+    height: auto;
     line-height: 1.5;
     vertical-align: bottom;
   }
