--- a/components/input/style/component.scss
+++ b/components/input/style/component.scss
@@ -16,22 +16,24 @@
   display: inline-block;
   width: 100%;
   color: #666;
+  -webkit-appearance: none;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #d9d9d9;
-  outline: 0;
+  border: 1px solid $base-theme-default;
+  outline: none;
   transition:
-    border .2s cubic-bezier(0.645, 0.045, 0.355, 1),
-    background .2s cubic-bezier(0.645, 0.045, 0.355, 1),
-    box-shadow .2s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border .3s cubic-bezier(0.645, 0.045, 0.355, 1),
+    background .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+
+  &:hover {
+    border-color: #ccc;
+  }
 
   &:focus {
     border-color: #57c5f7;
-    outline: 0;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
   }
 
-  &:hover {
+  &:active {
     border-color: #57c5f7;
   }
 
