feat: add focus method when modal elem is showing

--- a/components/modal/style/component.scss
+++ b/components/modal/style/component.scss
@@ -38,6 +38,10 @@
       overflow: hidden;
       z-index: $base-zindex-modal + 1;
       will-change: transform;
+
+      &:focus {
+        outline: none;
+      }
     }
   }
   // fix popover-content position when using in Modal
